feat: replace print statements with ConsoleLogger in analysis modules
- Replace ~58 print() statements with logger calls across analysis modules
- FunctionalNetworkMapping: Use logger.info(), success(), progress()
  - Single-lesion analysis: 28 replacements
  - Vectorized batch processing: 11 replacements
  - Resampling helper: 2 replacements
- StructuralNetworkMapping: Use logger.section(), subsection(), info()
  - Main analysis flow: 6 replacements
  - Connectivity matrices computation: 11 replacements
- Implement proper verbose flag functionality
  - Essential info (sections, success) always shows
  - Detailed progress only with verbose=True
  - Consistent emoji symbols and formatting throughout
- Remove redundant if self.verbose checks (logger handles it automatically)
- All tests passing (41 tests: 24 logging + 17 repr)

This completes the logging system integration requested by the user to provide
consistent, professional output across all analysis modules with proper verbose
control.

--- a/notebooks/examples/demo_logging_and_repr.ipynb
+++ b/notebooks/examples/demo_logging_and_repr.ipynb
@@ -29,8 +29,21 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "\n",
-    "from ldk.utils.logging import ConsoleLogger, log_section, log_info, log_success, log_warning, log_error, log_progress\n",
-    "from ldk.analysis import FunctionalNetworkMapping, StructuralNetworkMapping, RegionalDamage, AtlasAggregation"
+    "from ldk.utils.logging import (\n",
+    "    ConsoleLogger,\n",
+    "    log_section,\n",
+    "    log_info,\n",
+    "    log_success,\n",
+    "    log_warning,\n",
+    "    log_error,\n",
+    "    log_progress,\n",
+    ")\n",
+    "from ldk.analysis import (\n",
+    "    FunctionalNetworkMapping,\n",
+    "    StructuralNetworkMapping,\n",
+    "    RegionalDamage,\n",
+    "    AtlasAggregation,\n",
+    ")"
    ]
   },
   {
@@ -45,10 +58,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "796a177c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "PROCESSING PIPELINE\n",
+      "======================================================================\n",
+      "ℹ️  Starting data processing...\n",
+      "  ℹ️  Loading connectome data\n",
+      "  ℹ️  Validating input files\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a logger instance\n",
     "logger = ConsoleLogger(verbose=True, width=70)\n",
@@ -67,23 +94,53 @@
    "execution_count": null,
    "id": "021ec50f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Data loaded successfully\n",
+      "  - n_subjects: 1,000\n",
+      "  - n_voxels: 228,483\n",
+      "  - memory_usage_mb: 15.30\n",
+      "  - load_time_sec: 2.45\n"
+     ]
+    }
+   ],
    "source": [
     "# Success messages with details\n",
-    "logger.success(\"Data loaded successfully\", details={\n",
-    "    \"n_subjects\": 1000,\n",
-    "    \"n_voxels\": 228483,\n",
-    "    \"memory_usage_mb\": 15.3,\n",
-    "    \"load_time_sec\": 2.45\n",
-    "})"
+    "logger.success(\n",
+    "    \"Data loaded successfully\",\n",
+    "    details={\n",
+    "        \"n_subjects\": 1000,\n",
+    "        \"n_voxels\": 228483,\n",
+    "        \"memory_usage_mb\": 15.3,\n",
+    "        \"load_time_sec\": 2.45,\n",
+    "    },\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dcd4f93b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Running Analysis\n",
+      "----------------------------------------------------------------------\n",
+      "▶️  Processing batch [1/5]\n",
+      "▶️  Processing batch [2/5]\n",
+      "▶️  Processing batch [3/5]\n",
+      "▶️  Computing correlations [75.5%]\n"
+     ]
+    }
+   ],
    "source": [
     "# Subsection headers\n",
     "logger.subsection(\"Running Analysis\")\n",
@@ -99,10 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "856f795d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️  Lesion size smaller than 100 voxels\n",
+      "  ⚠️  Some voxels fall outside brain mask\n"
+     ]
+    }
+   ],
    "source": [
     "# Warning messages\n",
     "logger.warning(\"Lesion size smaller than 100 voxels\")\n",
@@ -114,16 +180,32 @@
    "execution_count": null,
    "id": "399398ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analysis Results:\n",
+      "  - Mean correlation: 0.4523\n",
+      "  - Std correlation: 0.1234\n",
+      "  - Max correlation: 0.8912\n",
+      "  - Min correlation: -0.3456\n",
+      "  - N significant voxels: 12,458\n"
+     ]
+    }
+   ],
    "source": [
     "# Result summaries\n",
-    "logger.result_summary(\"Analysis Results\", {\n",
-    "    \"Mean correlation\": 0.4523,\n",
-    "    \"Std correlation\": 0.1234,\n",
-    "    \"Max correlation\": 0.8912,\n",
-    "    \"Min correlation\": -0.3456,\n",
-    "    \"N significant voxels\": 12458\n",
-    "})"
+    "logger.result_summary(\n",
+    "    \"Analysis Results\",\n",
+    "    {\n",
+    "        \"Mean correlation\": 0.4523,\n",
+    "        \"Std correlation\": 0.1234,\n",
+    "        \"Max correlation\": 0.8912,\n",
+    "        \"Min correlation\": -0.3456,\n",
+    "        \"N significant voxels\": 12458,\n",
+    "    },\n",
+    ")"
    ]
   },
   {
@@ -138,10 +220,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2e0439ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "BATCH PROCESSING\n",
+      "======================================================================\n",
+      "ℹ️  Processing 10 subjects in parallel\n",
+      "▶️  Subjects processed [7/10]\n",
+      "✅ All subjects completed successfully!\n",
+      "⚠️  2 subjects had small lesions (< 50 voxels)\n"
+     ]
+    }
+   ],
    "source": [
     "log_section(\"BATCH PROCESSING\")\n",
     "log_info(\"Processing 10 subjects in parallel\")\n",
@@ -173,7 +270,27 @@
    "execution_count": null,
    "id": "1ca6c1ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repr() output:\n",
+      "FunctionalNetworkMapping(connectome_path='/path/to/connectome_batches', method='boes', pini_percentile=20, n_jobs=1, compute_t_map=True, t_threshold=2.0, verbose=True)\n",
+      "\n",
+      "print() output:\n",
+      "FunctionalNetworkMapping Analysis\n",
+      "Configuration:\n",
+      "  - connectome_path: /path/to/connectome_batches\n",
+      "  - method: boes\n",
+      "  - pini_percentile: 20\n",
+      "  - n_jobs: 1\n",
+      "  - compute_t_map: True\n",
+      "  - t_threshold: 2.0\n",
+      "  - verbose: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Create analysis object\n",
     "flnm = FunctionalNetworkMapping(\n",
@@ -181,7 +298,7 @@
     "    method=\"boes\",\n",
     "    compute_t_map=True,\n",
     "    t_threshold=2.0,\n",
-    "    verbose=True\n",
+    "    verbose=True,\n",
     ")\n",
     "\n",
     "# repr() - constructor-style representation\n",
@@ -207,7 +324,29 @@
    "execution_count": null,
    "id": "ae5235e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repr() output:\n",
+      "StructuralNetworkMapping(tractogram_path='/path/to/whole_brain.tck', whole_brain_tdi='/path/to/tdi_map.nii.gz', template=None, atlas_path='schaefer100', compute_lesioned=True, n_jobs=4, keep_intermediate=False, load_to_memory=True, verbose=True)\n",
+      "\n",
+      "print() output:\n",
+      "StructuralNetworkMapping Analysis\n",
+      "Configuration:\n",
+      "  - tractogram_path: /path/to/whole_brain.tck\n",
+      "  - whole_brain_tdi: /path/to/tdi_map.nii.gz\n",
+      "  - template: None\n",
+      "  - atlas_path: schaefer100\n",
+      "  - compute_lesioned: True\n",
+      "  - n_jobs: 4\n",
+      "  - keep_intermediate: False\n",
+      "  - load_to_memory: True\n",
+      "  - verbose: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Create analysis object\n",
     "slnm = StructuralNetworkMapping(\n",
@@ -216,7 +355,7 @@
     "    atlas_path=\"schaefer100\",\n",
     "    compute_lesioned=True,\n",
     "    n_jobs=4,\n",
-    "    check_dependencies=False\n",
+    "    check_dependencies=False,\n",
     ")\n",
     "\n",
     "print(\"repr() output:\")\n",
@@ -240,13 +379,30 @@
    "execution_count": null,
    "id": "07b2aa52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repr() output:\n",
+      "RegionalDamage(atlas_dir='/media/moritz/Storage2/projects_marvin/lesion_d...', source='lesion_img', aggregation='percent', threshold=0.5, atlas_names=['AAL3', 'Schaefer2018_100'], num_atlases=0, analysis_type='RegionalDamage')\n",
+      "\n",
+      "print() output:\n",
+      "RegionalDamage Analysis\n",
+      "Configuration:\n",
+      "  - atlas_dir: /media/moritz/Storage2/projects_marvin/lesion_decoding_to...\n",
+      "  - source: lesion_img\n",
+      "  - aggregation: percent\n",
+      "  - threshold: 0.5\n",
+      "  - atlas_names: ['AAL3', 'Schaefer2018_100']\n",
+      "  - num_atlases: 0\n",
+      "  - analysis_type: RegionalDamage\n"
+     ]
+    }
+   ],
    "source": [
     "# Create analysis object\n",
-    "rd = RegionalDamage(\n",
-    "    threshold=0.5,\n",
-    "    atlas_names=[\"AAL3\", \"Schaefer2018_100\"]\n",
-    ")\n",
+    "rd = RegionalDamage(threshold=0.5, atlas_names=[\"AAL3\", \"Schaefer2018_100\"])\n",
     "\n",
     "print(\"repr() output:\")\n",
     "print(repr(rd))\n",
@@ -269,14 +425,30 @@
    "execution_count": null,
    "id": "85931616",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repr() output:\n",
+      "AtlasAggregation(atlas_dir='/media/moritz/Storage2/projects_marvin/lesion_d...', source='lesion_img', aggregation='mean', threshold=0.3, atlas_names=['AAL3', 'Schaefer2018_200'], num_atlases=0)\n",
+      "\n",
+      "print() output:\n",
+      "AtlasAggregation Analysis\n",
+      "Configuration:\n",
+      "  - atlas_dir: /media/moritz/Storage2/projects_marvin/lesion_decoding_to...\n",
+      "  - source: lesion_img\n",
+      "  - aggregation: mean\n",
+      "  - threshold: 0.3\n",
+      "  - atlas_names: ['AAL3', 'Schaefer2018_200']\n",
+      "  - num_atlases: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Create analysis object\n",
     "aa = AtlasAggregation(\n",
-    "    source=\"lesion_img\",\n",
-    "    aggregation=\"mean\",\n",
-    "    threshold=0.3,\n",
-    "    atlas_names=[\"AAL3\", \"Schaefer2018_200\"]\n",
+    "    source=\"lesion_img\", aggregation=\"mean\", threshold=0.3, atlas_names=[\"AAL3\", \"Schaefer2018_200\"]\n",
     ")\n",
     "\n",
     "print(\"repr() output:\")\n",
@@ -310,18 +482,56 @@
    "execution_count": null,
    "id": "eb3f8eeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Configured analyses:\n",
+      "\n",
+      "1. FunctionalNetworkMapping Analysis\n",
+      "Configuration:\n",
+      "  - connectome_path: /data/connectome.h5\n",
+      "  - method: boes\n",
+      "  - pini_percentile: 20\n",
+      "  - n_jobs: 1\n",
+      "  - compute_t_map: True\n",
+      "  - t_threshold: None\n",
+      "  - verbose: False\n",
+      "\n",
+      "2. FunctionalNetworkMapping Analysis\n",
+      "Configuration:\n",
+      "  - connectome_path: /data/connectome.h5\n",
+      "  - method: pini\n",
+      "  - pini_percentile: 30\n",
+      "  - n_jobs: 1\n",
+      "  - compute_t_map: True\n",
+      "  - t_threshold: None\n",
+      "  - verbose: False\n",
+      "\n",
+      "3. RegionalDamage Analysis\n",
+      "Configuration:\n",
+      "  - atlas_dir: /media/moritz/Storage2/projects_marvin/lesion_decoding_to...\n",
+      "  - source: lesion_img\n",
+      "  - aggregation: percent\n",
+      "  - threshold: 0.5\n",
+      "  - atlas_names: None\n",
+      "  - num_atlases: 0\n",
+      "  - analysis_type: RegionalDamage\n"
+     ]
+    }
+   ],
    "source": [
     "# When debugging, quickly check your analysis configuration\n",
     "analyses = [\n",
     "    FunctionalNetworkMapping(\"/data/connectome.h5\", method=\"boes\"),\n",
     "    FunctionalNetworkMapping(\"/data/connectome.h5\", method=\"pini\", pini_percentile=30),\n",
-    "    RegionalDamage(threshold=0.5)\n",
+    "    RegionalDamage(threshold=0.5),\n",
     "]\n",
     "\n",
     "print(\"Configured analyses:\")\n",
     "for i, analysis in enumerate(analyses, 1):\n",
-    "    print(f\"\\n{i}. {repr(analysis)}\")"
+    "    print(f\"\\n{i}. {analysis}\")"
    ]
   },
   {
@@ -337,7 +547,54 @@
    "execution_count": null,
    "id": "a0b26e93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "LESION ANALYSIS WORKFLOW\n",
+      "======================================================================\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Step 1: Configuration\n",
+      "----------------------------------------------------------------------\n",
+      "ℹ️  Analysis configured: FunctionalNetworkMapping\n",
+      "  ℹ️  Parameters:\n",
+      "    ℹ️  connectome_path = /data/connectome.h5\n",
+      "    ℹ️  method = boes\n",
+      "    ℹ️  pini_percentile = 20\n",
+      "    ℹ️  n_jobs = 1\n",
+      "    ℹ️  compute_t_map = True\n",
+      "    ℹ️  t_threshold = 2.0\n",
+      "    ℹ️  verbose = False\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Step 2: Validation\n",
+      "----------------------------------------------------------------------\n",
+      "ℹ️  Checking connectome file...\n",
+      "ℹ️  Checking lesion registration...\n",
+      "✅ All validations passed\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Step 3: Processing\n",
+      "----------------------------------------------------------------------\n",
+      "ℹ️  Extracting lesion timeseries...\n",
+      "  ℹ️  Computing correlations...\n",
+      "▶️  Batch processing [1/5]\n",
+      "▶️  Batch processing [5/5]\n",
+      "✅ Processing complete\n",
+      "  - processing_time: 42.50\n",
+      "  - n_correlations: 228,483\n",
+      "  - memory_peak_mb: 15.20\n",
+      "\n",
+      "======================================================================\n",
+      "WORKFLOW COMPLETE ✓\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "logger = ConsoleLogger(verbose=True, width=70)\n",
     "\n",
@@ -346,10 +603,7 @@
     "# Step 1: Setup\n",
     "logger.subsection(\"Step 1: Configuration\")\n",
     "analysis = FunctionalNetworkMapping(\n",
-    "    connectome_path=\"/data/connectome.h5\",\n",
-    "    method=\"boes\",\n",
-    "    compute_t_map=True,\n",
-    "    t_threshold=2.0\n",
+    "    connectome_path=\"/data/connectome.h5\", method=\"boes\", compute_t_map=True, t_threshold=2.0\n",
     ")\n",
     "logger.info(f\"Analysis configured: {analysis.__class__.__name__}\")\n",
     "logger.info(\"Parameters:\", indent_level=1)\n",
@@ -368,11 +622,10 @@
     "logger.info(\"Computing correlations...\", indent_level=1)\n",
     "logger.progress(\"Batch processing\", current=1, total=5)\n",
     "logger.progress(\"Batch processing\", current=5, total=5)\n",
-    "logger.success(\"Processing complete\", details={\n",
-    "    \"processing_time\": 42.5,\n",
-    "    \"n_correlations\": 228483,\n",
-    "    \"memory_peak_mb\": 15.2\n",
-    "})\n",
+    "logger.success(\n",
+    "    \"Processing complete\",\n",
+    "    details={\"processing_time\": 42.5, \"n_correlations\": 228483, \"memory_peak_mb\": 15.2},\n",
+    ")\n",
     "\n",
     "logger.section(\"WORKFLOW COMPLETE ✓\")"
    ]
@@ -387,10 +640,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b32bba5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "PARAMETER COMPARISON\n",
+      "======================================================================\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Configuration 1\n",
+      "----------------------------------------------------------------------\n",
+      "FunctionalNetworkMapping Analysis\n",
+      "Configuration:\n",
+      "  - connectome_path: /data/connectome.h5\n",
+      "  - method: boes\n",
+      "  - pini_percentile: 20\n",
+      "  - n_jobs: 1\n",
+      "  - compute_t_map: True\n",
+      "  - t_threshold: None\n",
+      "  - verbose: False\n",
+      "\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Configuration 2\n",
+      "----------------------------------------------------------------------\n",
+      "FunctionalNetworkMapping Analysis\n",
+      "Configuration:\n",
+      "  - connectome_path: /data/connectome.h5\n",
+      "  - method: pini\n",
+      "  - pini_percentile: 20\n",
+      "  - n_jobs: 1\n",
+      "  - compute_t_map: True\n",
+      "  - t_threshold: None\n",
+      "  - verbose: False\n",
+      "\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Configuration 3\n",
+      "----------------------------------------------------------------------\n",
+      "FunctionalNetworkMapping Analysis\n",
+      "Configuration:\n",
+      "  - connectome_path: /data/connectome.h5\n",
+      "  - method: pini\n",
+      "  - pini_percentile: 50\n",
+      "  - n_jobs: 1\n",
+      "  - compute_t_map: True\n",
+      "  - t_threshold: None\n",
+      "  - verbose: False\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Compare different analysis configurations\n",
     "configs = [\n",
@@ -430,8 +736,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "lesion_decoding_toolkit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
