docs: add comprehensive batch processing examples to notebook
Add complete batch processing demonstrations for T156-T159:
- Sample data generation for batch processing
- RegionalDamage batch processing (T157)
- FunctionalNetworkMapping batch processing (T158)
- StructuralNetworkMapping batch processing example (T159)
- ParcelAggregation batch processing (T156)

All examples demonstrate:
- Parallel processing with n_jobs parameter
- Progress tracking with show_progress
- Correct API usage (connectome_name, atlas_names)
- PascalCase result naming (desc-CorrelationMap)
- BIDS-style atlas keys (atlas-{name}_desc-{Source})

Updated section numbering (Migration Summary: 10 → 11).

--- a/examples/api_demo_v0.5.ipynb
+++ b/examples/api_demo_v0.5.ipynb
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "20b7aebc",
    "metadata": {},
    "outputs": [
@@ -1613,20 +1613,25 @@
     "# For demo purposes, we'll show the API structure\n",
     "\n",
     "fnm = FunctionalNetworkMapping(\n",
-    "    connectome=\"GSP1000\",  # Example connectome\n",
-    "    method=\"correlation\",\n",
-    "    log_level=\"INFO\"  # NEW: Control logging output\n",
+    "    connectome_name=\"GSP1000\",  # Registry-based connectome reference\n",
+    "    method=\"boes\",  # or \"pini\"\n",
     ")\n",
     "\n",
     "print(f\"Analysis: {fnm}\")\n",
-    "print(f\"\\nConnectome: {fnm.connectome}\")\n",
+    "print(f\"\\nConnectome: {fnm.connectome_name}\")\n",
     "print(f\"Method: {fnm.method}\")\n",
     "\n",
     "# Run analysis (commented out - requires actual connectome)\n",
     "# result = fnm.run(mask_data)\n",
     "# print(f\"\\nResults: {list(result.results['FunctionalNetworkMapping'].keys())}\")\n",
-    "# correlation_map = result.results['FunctionalNetworkMapping']['correlation_map_from_mask_img']\n",
-    "# print(f\"Type: {type(correlation_map)}  # VoxelMap\")"
+    "#\n",
+    "# # All result keys now use PascalCase (BIDS desc- field)\n",
+    "# correlation_map = result.results['FunctionalNetworkMapping']['desc-CorrelationMap']\n",
+    "# z_map = result.results['FunctionalNetworkMapping']['desc-ZMap']\n",
+    "# t_map = result.results['FunctionalNetworkMapping']['desc-TMap']\n",
+    "# t_threshold_map = result.results['FunctionalNetworkMapping']['desc-TThresholdMap']\n",
+    "#\n",
+    "# print(f\"CorrelationMap type: {type(correlation_map)}  # VoxelMap\")"
    ]
   },
   {
@@ -1648,16 +1653,16 @@
    "source": [
     "# Regional damage uses bundled atlases\n",
     "regional = RegionalDamage(\n",
-    "    parcel_names=[\"Schaefer100\", \"Schaefer200\"],  # Filter specific atlases\n",
+    "    atlas_names=[\"Schaefer100\", \"Schaefer200\"],  # Filter specific atlases\n",
     "    threshold=0.0,\n",
-    "    log_level=\"WARNING\"  # Quieter logging\n",
     ")\n",
     "\n",
     "result = regional.run(mask_data)\n",
     "\n",
-    "# Access results - dict with atlas names as keys\n",
+    "# Access results - BIDS-style keys with PascalCase desc field\n",
     "damage_results = result.results[\"RegionalDamage\"]\n",
     "print(f\"Atlases processed: {list(damage_results.keys())}\")\n",
+    "print(f\"\\nExample key format: atlas-{{atlas_name}}_desc-MaskImg\")\n",
     "\n",
     "# Each atlas returns ParcelData\n",
     "for atlas_key, parcel_data in damage_results.items():\n",
@@ -1699,11 +1704,11 @@
     "correlation_img = nib.Nifti1Image(correlation_data, affine)\n",
     "\n",
     "correlation_map = VoxelMap(\n",
-    "    name=\"correlation_map\",\n",
+    "    name=\"CorrelationMap\",  # PascalCase naming\n",
     "    data=correlation_img,\n",
     "    space=\"MNI152NLin6Asym\",\n",
     "    resolution=2.0,\n",
-    "    metadata={\"method\": \"correlation\", \"connectome\": \"demo\"}\n",
+    "    metadata={\"method\": \"boes\", \"connectome\": \"demo\"}\n",
     ")\n",
     "\n",
     "print(f\"Created VoxelMap: {correlation_map.name}\")\n",
@@ -1711,18 +1716,21 @@
     "print(f\"  Resolution: {correlation_map.resolution}mm\")\n",
     "\n",
     "# Add to MaskData results\n",
-    "mask_data.results[\"DemoAnalysis\"] = {\"correlation_map\": correlation_map}\n",
+    "mask_data.results[\"DemoAnalysis\"] = {\"desc-CorrelationMap\": correlation_map}\n",
     "\n",
     "# Now aggregate by atlas\n",
     "aggregation = ParcelAggregation(\n",
-    "    source=\"DemoAnalysis.correlation_map\",  # Cross-analysis reference\n",
+    "    source=\"DemoAnalysis.desc-CorrelationMap\",  # Cross-analysis reference with PascalCase\n",
     "    aggregation=\"mean\",\n",
-    "    parcel_names=[\"Schaefer100\"],\n",
+    "    atlas_names=[\"Schaefer100\"],\n",
     "    threshold=0.0\n",
     ")\n",
     "\n",
     "agg_result = aggregation.run(mask_data)\n",
-    "parcel_data = agg_result.results[\"ParcelAggregation\"][\"Schaefer100_from_correlation_map\"]\n",
+    "\n",
+    "# Result key format: atlas-{name}_desc-{PascalCaseSource}\n",
+    "parcel_key = \"atlas-Schaefer100_desc-CorrelationMap\"\n",
+    "parcel_data = agg_result.results[\"ParcelAggregation\"][parcel_key]\n",
     "\n",
     "print(f\"\\nAggregated to {len(parcel_data.get_data())} parcels\")\n",
     "print(f\"Aggregation method: {parcel_data.aggregation_method}\")\n",
@@ -1904,11 +1912,198 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6582932a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First create correlation maps for all subjects\n",
+    "for i, result in enumerate(results_fnm):\n",
+    "    # Create a VoxelMap from FunctionalNetworkMapping results\n",
+    "    corr_map = result.results['FunctionalNetworkMapping']['desc-CorrelationMap']\n",
+    "    \n",
+    "    # Rename and store for ParcelAggregation\n",
+    "    demo_map = VoxelMap(\n",
+    "        name=\"CorrelationMap\",\n",
+    "        data=corr_map.data,\n",
+    "        affine=corr_map.affine,\n",
+    "        space=corr_map.space\n",
+    "    )\n",
+    "    result.results[\"DemoAnalysis\"] = {\"desc-CorrelationMap\": demo_map}\n",
+    "\n",
+    "# Now batch process ParcelAggregation\n",
+    "pa = ParcelAggregation(\n",
+    "    source=\"DemoAnalysis.desc-CorrelationMap\",\n",
+    "    atlas_names=[\"Schaefer100\"],\n",
+    "    statistic=\"mean\"\n",
+    ")\n",
+    "\n",
+    "results_pa = batch_process(\n",
+    "    analysis=pa,\n",
+    "    mask_data_list=results_fnm,  # Use results with added demo maps\n",
+    "    n_jobs=2,\n",
+    "    show_progress=True\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nProcessed {len(results_pa)} subjects\")\n",
+    "print(f\"First result keys: {list(results_pa[0].results['ParcelAggregation'].keys())}\")\n",
+    "# Result key format: atlas-{name}_desc-{Source}\n",
+    "parcel_key = \"atlas-Schaefer100_desc-CorrelationMap\"\n",
+    "print(f\"Aggregated data shape: {results_pa[0].results['ParcelAggregation'][parcel_key].data.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9ac0eb9",
+   "metadata": {},
+   "source": [
+    "### Batch ParcelAggregation (T156)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd14d6cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: StructuralNetworkMapping requires tractography data (not shown in this demo)\n",
+    "# Example usage pattern:\n",
+    "\n",
+    "# snm = StructuralNetworkMapping(\n",
+    "#     tck_path=Path(\"path/to/tractogram.tck\"),\n",
+    "#     atlas_name=\"Schaefer100\"\n",
+    "# )\n",
+    "# \n",
+    "# results_snm = batch_process(\n",
+    "#     analysis=snm,\n",
+    "#     mask_data_list=mask_data_list,\n",
+    "#     n_jobs=2,\n",
+    "#     show_progress=True\n",
+    "# )\n",
+    "# \n",
+    "# # Results include: desc-DisconnectedStreamlines, desc-ConnectivityMatrix\n",
+    "# print(f\"Processed {len(results_snm)} subjects\")\n",
+    "# print(f\"First result keys: {list(results_snm[0].results['StructuralNetworkMapping'].keys())}\")\n",
+    "\n",
+    "print(\"StructuralNetworkMapping requires tractography data (e.g., .tck files)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7fb5095",
+   "metadata": {},
+   "source": [
+    "### Batch StructuralNetworkMapping (T159)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ba8fd22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Process multiple lesions with FunctionalNetworkMapping\n",
+    "fnm = FunctionalNetworkMapping(\n",
+    "    connectome_name=\"GSP1000\",\n",
+    "    method=\"boes\"\n",
+    ")\n",
+    "\n",
+    "results_fnm = batch_process(\n",
+    "    analysis=fnm,\n",
+    "    mask_data_list=mask_data_list,\n",
+    "    n_jobs=2,\n",
+    "    show_progress=True\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nProcessed {len(results_fnm)} subjects\")\n",
+    "print(f\"First result keys: {list(results_fnm[0].results['FunctionalNetworkMapping'].keys())}\")\n",
+    "# Result keys follow PascalCase: desc-CorrelationMap, desc-ZMap, desc-TMap, desc-TThresholdMap\n",
+    "print(f\"Correlation map shape: {results_fnm[0].results['FunctionalNetworkMapping']['desc-CorrelationMap'].data.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "728cc89c",
+   "metadata": {},
+   "source": [
+    "### Batch FunctionalNetworkMapping (T158)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "412efd46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Process multiple lesions with RegionalDamage\n",
+    "rd = RegionalDamage(atlas_names=[\"Schaefer100\", \"Schaefer200\"])\n",
+    "\n",
+    "results = batch_process(\n",
+    "    analysis=rd,\n",
+    "    mask_data_list=mask_data_list,\n",
+    "    n_jobs=2,\n",
+    "    show_progress=True\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nProcessed {len(results)} subjects\")\n",
+    "print(f\"First result keys: {list(results[0].results['RegionalDamage'].keys())}\")\n",
+    "print(f\"First atlas shape: {results[0].results['RegionalDamage']['atlas-Schaefer100_desc-MaskImg'].data.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0276c5c2",
+   "metadata": {},
+   "source": [
+    "### Batch RegionalDamage (T157)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc4689c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lacuna.batch import batch_process\n",
+    "\n",
+    "# Create sample masks for demonstration\n",
+    "mask_data_list = []\n",
+    "for i in range(3):\n",
+    "    # Create slightly different masks\n",
+    "    noise = np.random.rand(*shape) * 0.1\n",
+    "    varied_mask = (binary_mask + noise > 0.5).astype(np.float32)\n",
+    "    \n",
+    "    mask_img = nib.Nifti1Image(varied_mask, affine)\n",
+    "    mask_data_sample = MaskData(\n",
+    "        subject_id=f\"subject{i+1:03d}\",\n",
+    "        mask_img=mask_img\n",
+    "    )\n",
+    "    mask_data_list.append(mask_data_sample)\n",
+    "\n",
+    "print(f\"Created {len(mask_data_list)} sample masks for batch processing\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416c8539",
+   "metadata": {},
+   "source": [
+    "## 10. Batch Processing\n",
+    "\n",
+    "Process multiple lesions efficiently with parallel execution:"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "eab076b8",
    "metadata": {},
    "source": [
-    "## 10. Migration Summary\n",
+    "## 11. Migration Summary\n",
     "\n",
     "### Key Changes in v0.5.0\n",
     "\n",
@@ -1933,8 +2128,7 @@
     "### Next Steps\n",
     "\n",
     "- See `docs/migration_guide.md` for complete migration instructions\n",
-    "- Check `examples/` for more usage patterns\n",
-    "- Run `make test` to verify your code"
+    "- Check `examples/` for more usage patterns"
    ]
   },
   {
