feat: enhance Colab setup instructions and clarify installation steps

--- a/docs/tutorials/getting-started.ipynb
+++ b/docs/tutorials/getting-started.ipynb
@@ -23,29 +23,50 @@
    },
    "outputs": [],
    "source": [
-    "# @title Setup environment (Run this first!)\n",
-    "# @markdown This cell installs dependencies on Google Colab.\n",
-    "# @markdown It takes about 45-60 seconds.\n",
+    "# @title 🚀 Setup Environment (Run this first!)\n",
+    "# @markdown This cell installs MRtrix3, Python 3.11, and Lacuna on Google Colab.\n",
+    "# @markdown **Note:** The runtime will automatically restart during this process to apply updates.\n",
+    "# @markdown If the cell stops, **please run it one more time** until you see \"✅ Installation Complete\".\n",
     "\n",
     "import os\n",
     "import sys\n",
+    "import time\n",
     "\n",
     "# Detect if running on Colab\n",
     "if 'google.colab' in sys.modules:\n",
-    "    print(\"Detected Google Colab. Installing Environment...\")\n",
-    "    \n",
-    "    # 1. Install Conda\n",
-    "    !pip install -q condacolab\n",
-    "    import condacolab\n",
-    "    condacolab.install()\n",
-    "    \n",
-    "    # 2. Install python 3.11 and MRtrix3 via Mamba\n",
-    "    !mamba install -y -c mrtrix3 -c conda-forge mrtrix3 python=3.11\n",
+    "    try:\n",
+    "        # 1. Check if Lacuna is already working\n",
+    "        import lacuna\n",
+    "        print(\"✅ Installation Complete. Lacuna is ready.\")\n",
+    "        \n",
+    "    except ImportError:\n",
+    "        print(\"🐢 Lacuna not found. Starting installation (approx 60s)...\")\n",
+    "        \n",
+    "        # --- STEP A: Conda Setup ---\n",
+    "        # condacolab.install() might trigger a restart on its own.\n",
+    "        # If the cell stops here, just run it again!\n",
+    "        if not os.path.exists(\"/usr/local/conda\"):\n",
+    "            !pip install -q condacolab\n",
+    "            import condacolab\n",
+    "            condacolab.install()\n",
+    "        \n",
+    "        # --- STEP B: Install MRtrix3 & Python 3.11 ---\n",
+    "        print(\"📦 Installing MRtrix3 and dependencies...\")\n",
+    "        !mamba install -y -c mrtrix3 -c conda-forge mrtrix3 python=3.11\n",
+    "        \n",
+    "        # --- STEP C: Install Lacuna from GitHub ---\n",
+    "        print(\"📦 Installing Lacuna...\")\n",
+    "        !pip install git+https://github.com/m-petersen/lacuna\n",
+    "        \n",
+    "        print(\"🔄 Dependencies updated. Restarting runtime to load new versions...\")\n",
+    "        print(\"⚠️ Execution will stop here. Please RUN THIS CELL ONE MORE TIME to finish!\")\n",
+    "        \n",
+    "        # Give a moment for prints to show\n",
+    "        time.sleep(1)\n",
+    "        \n",
+    "        # Force Colab to restart the kernel to load the new Numpy/Dateutil\n",
+    "        os.kill(os.getpid(), 9)\n",
     "\n",
-    "    # 3. Install lacuna\n",
-    "    !pip install git+https://github.com/m-petersen/lacuna\n",
-    "    \n",
-    "    print(\"✅ Installation Complete. You can now run the cells below.\")\n",
     "else:\n",
     "    print(\"Not running on Colab. Assuming local environment is set up.\")"
    ]
