refactor: update color scheme settings in mkdocs.yml and clean up tutorial code cells

--- a/docs/tutorials/getting-started.ipynb
+++ b/docs/tutorials/getting-started.ipynb
@@ -22,60 +22,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "b34fc38e",
    "metadata": {
     "tags": [
      "remove_cell"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running on Colab. Assuming local environment is set up.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# @markdown This cell sets up a conda environment on Google Colab.\n",
     "# @markdown **Note:** The runtime will automatically restart during this process to apply updates.\n",
     "# @markdown If the cell stops, **please run it one more time** until you see \"✅ Installation Complete\".\n",
     "\n",
-    "import os\n",
-    "import sys\n",
-    "import time\n",
+    "# import os\n",
+    "# import sys\n",
+    "# import time\n",
     "\n",
-    "# Detect if running on Colab\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    try:\n",
-    "        # 1. Check if Lacuna is already working\n",
-    "        import lacuna\n",
-    "        print(\"✅ Installation Complete. Lacuna is ready.\")\n",
+    "# # Detect if running on Colab\n",
+    "# if 'google.colab' in sys.modules:\n",
+    "#     try:\n",
+    "#         # 1. Check if Lacuna is already working\n",
+    "#         import lacuna\n",
+    "#         print(\"✅ Installation Complete. Lacuna is ready.\")\n",
     "        \n",
-    "    except ImportError:\n",
-    "        print(\"Lacuna not found. Starting installation (approx 60s)...\")\n",
+    "#     except ImportError:\n",
+    "#         print(\"Lacuna not found. Starting installation (approx 60s)...\")\n",
     "        \n",
-    "        # --- Conda Setup ---\n",
-    "        # condacolab.install() might trigger a restart on its own.\n",
-    "        # If the cell stops here, just run it again!\n",
-    "        if not os.path.exists(\"/usr/local/conda\"):\n",
-    "            !pip install -q condacolab\n",
-    "            import condacolab\n",
-    "            condacolab.install()\n",
+    "#         # --- Conda Setup ---\n",
+    "#         # condacolab.install() might trigger a restart on its own.\n",
+    "#         # If the cell stops here, just run it again!\n",
+    "#         if not os.path.exists(\"/usr/local/conda\"):\n",
+    "#             !pip install -q condacolab\n",
+    "#             import condacolab\n",
+    "#             condacolab.install()\n",
     "      \n",
-    "        print(\"Dependencies updated. Restarting runtime to load new versions...\")\n",
-    "        print(\"Execution will stop here. Please RUN THIS CELL ONE MORE TIME to finish!\")\n",
+    "#         print(\"Dependencies updated. Restarting runtime to load new versions...\")\n",
+    "#         print(\"Execution will stop here. Please RUN THIS CELL ONE MORE TIME to finish!\")\n",
     "        \n",
-    "        # Give a moment for prints to show\n",
-    "        time.sleep(1)\n",
+    "#         # Give a moment for prints to show\n",
+    "#         time.sleep(1)\n",
     "        \n",
-    "        # Force Colab to restart the kernel to load the new Numpy/Dateutil\n",
-    "        os.kill(os.getpid(), 9)\n",
+    "#         # Force Colab to restart the kernel to load the new Numpy/Dateutil\n",
+    "#         os.kill(os.getpid(), 9)\n",
     "\n",
-    "else:\n",
-    "    print(\"Not running on Colab. Assuming local environment is set up.\")"
+    "# else:\n",
+    "#     print(\"Not running on Colab. Assuming local environment is set up.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c973ba01",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# --- Conda Setup ---\n",
+    "# condacolab.install() might trigger a restart on its own.\n",
+    "# If the cell stops here, just run it again!\n",
+    "import os\n",
+    "\n",
+    "if not os.path.exists(\"/usr/local/conda\"):\n",
+    "    !pip install -q condacolab\n",
+    "    import condacolab\n",
+    "    condacolab.install()"
    ]
   },
   {
